--- a/EasyBilling.csproj
+++ b/EasyBilling.csproj
@@ -44,7 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppManager.cs" />
+    <Compile Include="BLL\Application\AppManager.cs" />
     <Compile Include="BLL\UserBLL.cs" />
     <Compile Include="Common.cs" />
     <Compile Include="DAL\UserDAL.cs" />
