Created DAL,BLL and delete,search functionalities and updated stored procedure related to operations on categories

--- a/EasyBilling.csproj
+++ b/EasyBilling.csproj
@@ -45,9 +45,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLL\Application\AppManager.cs" />
+    <Compile Include="BLL\CategoriesBLL.cs" />
     <Compile Include="BLL\LoginBLL.cs" />
     <Compile Include="BLL\UserBLL.cs" />
     <Compile Include="Common.cs" />
+    <Compile Include="DAL\CategoriesDAL.cs" />
     <Compile Include="DAL\LoginDAL.cs" />
     <Compile Include="DAL\UserDAL.cs" />
     <Compile Include="EasyBillingDataSet.Designer.cs">
