--- a/EasyBilling.csproj
+++ b/EasyBilling.csproj
@@ -50,10 +50,12 @@
     <Compile Include="BLL\Application\AppManager.cs" />
     <Compile Include="BLL\CategoriesBLL.cs" />
     <Compile Include="BLL\LoginBLL.cs" />
+    <Compile Include="BLL\ProductsBLL.cs" />
     <Compile Include="BLL\UserBLL.cs" />
     <Compile Include="Common.cs" />
     <Compile Include="DAL\CategoriesDAL.cs" />
     <Compile Include="DAL\LoginDAL.cs" />
+    <Compile Include="DAL\ProductsDAL.cs" />
     <Compile Include="DAL\UserDAL.cs" />
     <Compile Include="EasyBillingDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
